--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -36,8 +36,7 @@
 						    			<button name="slack" id=<%= submission[i].email %>>Send slack!</button>
 						    		</td>
 						    		<td>
-						    			<input type="checkbox" name="collected" autocomplete="off">
-						    			<button></button>
+						    			<button name="collected" id=<%= submission[i].email %>></button>
 						    		</td>
 								</tr>
 							<% } %>
