--- a/views/testqueue.ejs
+++ b/views/testqueue.ejs
@@ -62,7 +62,7 @@
                     <tr class="heading">
                       <th>Name</th>
                       <th>Email</th>
-                      <th>Ordered at</th>
+                      <th>Submision timestamp</th>
                       <th>Estimated waiting time</th>
                     </tr>
                     <% for (var i=0; i<submission.length; i++) { %>
