--- a/views/test.ejs
+++ b/views/test.ejs
@@ -79,7 +79,7 @@
       <div class="row">
         <div class="col-md-offset-3 col-md-6 text-center">
           <div class="widget">
-            <h4 class="widget-title">Waffles by Nelson</h4>
+            <h4 class="widget-title">Made by Nelson</h4>
           </div>
         </div>
       </div>
