--- a/views/queue.ejs
+++ b/views/queue.ejs
@@ -55,6 +55,19 @@
           <span onclick="openNav()" class="pull-right menu-icon">☰</span>
         </div>
       </header>
+      <div class="container">
+        <div class="col-md-5  text-center waitingcontainer">
+          <p>hi 1</p>
+          <p>hi 2</p>
+        </div>
+        <div class="col-md-2 text-center">
+        </div>
+        <div class="col-md-5  text-center waitingcontainer">
+          <p>hi 3</p>
+          <p>hi 4</p>
+        </div>
+      </div>
+      
       <div class="container waitingcontainer">
         <div class="row">
           <div class="col-md-12 text-center marb-35" style="float: none;">
