--- a/public/css/style.css
+++ b/public/css/style.css
@@ -128,6 +128,7 @@ table {
 .waitingcontainer {
     border: 1px solid goldenrod;
     margin-top: 3rem;
+    margin-bottom: 3rem;
 }
 
 @media (max-width: 767px) {
