--- a/views/home.ejs
+++ b/views/home.ejs
@@ -19,12 +19,7 @@
     <div class="bg-color">
       <header id="header">
         <div class="container">
-          <div id="mySidenav" class="sidenav">
-            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <a href="/queue">Queue</a>
-          </div>
-          <!-- Use any element to open the sidenav -->
-          <span onclick="openNav()" class="pull-right menu-icon">☰</span>
+          <a href="/queue"><span class="pull-right menu-icon"><img src="/static/img/queue-icon.png" width="32px"> Order Queue</span></a>
         </div>
       </header>
       <div class="container">
